implemented Custom Pattern Creation - compiles - still need to be tested